<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainPage">

    <ListView
            android:layout_width="match_parent"
            android:layout_height="318dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.188"
            android:id="@+id/routeList"/>
    <ListView
            android:layout_width="match_parent"
            android:layout_height="270dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="28dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/routeList" android:id="@+id/allRoutesList"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0"
    />
    <TextView
            android:text="@string/all_routes_text_view"
            android:layout_width="73dp"
            android:layout_height="20dp"
            android:id="@+id/allRoutesTextView"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="7dp" app:layout_constraintTop_toBottomOf="@+id/routeList"
            android:layout_marginBottom="5dp" app:layout_constraintBottom_toTopOf="@+id/allRoutesList"
            app:layout_constraintHorizontal_bias="0.02" app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:text="@string/my_routes_text_view"
            android:layout_width="73dp"
            android:layout_height="20dp" android:id="@+id/myRoutesTextView"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/routeList"
            app:layout_constraintHorizontal_bias="0.02" app:layout_constraintVertical_bias="1.0"
            app:layout_constraintTop_toTopOf="parent"/>
    <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" tools:layout_editor_absoluteX="1dp"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/routes"/>


        <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trucks"/>
    </com.google.android.material.tabs.TabLayout>
</androidx.constraintlayout.widget.ConstraintLayout>