<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity">
    <TextView
            android:text="@string/main_username_field_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.291"
            app:layout_constraintBottom_toTopOf="@+id/usernameField"
            app:layout_constraintVertical_bias="1.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/usernameField"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="104dp"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintBottom_toTopOf="@+id/passwordField"
            android:minHeight="48dp"/>
    <TextView
            android:text="@string/main_password_field_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameField"
            app:layout_constraintBottom_toTopOf="@+id/passwordField" app:layout_constraintHorizontal_bias="0.286"
            app:layout_constraintVertical_bias="1.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordField"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.381"
            android:minHeight="48dp"/>
    <Button
            android:text="@string/main_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button"
            android:onClick="validate"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.501"
            android:layout_marginBottom="128dp" app:layout_constraintTop_toBottomOf="@+id/passwordField"
            app:layout_constraintVertical_bias="0.326" tools:ignore="UsingOnClickInXml"/>

</androidx.constraintlayout.widget.ConstraintLayout>